--- a/week6_assignment.html
+++ b/week6_assignment.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deck of Cards</title>
+    <script src='week6_assignment.js' type="module"></script>
 </head>
 <body>
-    <script scr = "week6_assignment.js" type="module"></script>
+    'Playing a game of war'    
 </body>
 </html>
