made cards and added css to make them pretty

--- a/week6_assignment.html
+++ b/week6_assignment.html
@@ -6,8 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deck of Cards</title>
     <script src='week6_assignment.js' type="module"></script>
+    <link rel="stylesheet" href="wargamestyles.css">
 </head>
-<body>
-    'Playing a game of war'    
+<body> 
+   <div class="player_1-deck deck">26</div>
+   <div class="player_1-card-slot"></div>
+   <div class="card red" data-value="9 ♥">
+    ♥
+   </div>
+   <div class="text"></div>
+   <div class="player_2-deck deck">26</div>
+   <div class="player_2-card-slot"></div>
 </body>
 </html>
