--- a/week6_assignment.html
+++ b/week6_assignment.html
@@ -10,12 +10,17 @@
 </head>
 <body> 
    <div class="player_1-deck deck">26</div>
-   <div class="player_1-card-slot"></div>
-   <div class="card red" data-value="9 ♥">
-    ♥
-   </div>
-   <div class="text"></div>
+   <div class="player_1-card-slot card-slot">
+    <div class="card red" data-value="9 ♥">
+        ♥
+    </div>
+</div>
+   <div class="text">Random text</div>
    <div class="player_2-deck deck">26</div>
-   <div class="player_2-card-slot"></div>
+   <div class="player_2-card-slot card-slot">
+    <div class="card red" data-value="9 ♥">
+        ♥
+    </div>
+   </div>
 </body>
 </html>
